# pg-source-qa

./: .env.example  .gitignore  .kimi.toml.example  AGENTS.md  GITHUB_UPLOAD_GUIDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  upload_to_github.ps1
docs/: CLI_COMMAND_GUIDE.md  CPU_DEPLOYMENT.md  DEPENDENCIES.md  DEVELOPMENT_PLAN.md  FIX_INDEX_COMMAND.md  FIX_TOML_FORMAT.md  INDEX_COMMAND_GUIDE.md  KIMI_TOML_CONFIG.md  OFFLINE_DEPLOYMENT.md  QUICK_START_CPU.md  SERVER_DEBUG_GUIDE.md  TROUBLESHOOTING.md
scripts/: check_deps.py  check_pydantic.py  debug_settings.py  diagnose_cli.py  download_model.py  download_postgres.py  fix_server.ps1  fix_server.sh  run_cli.py  setup.ps1  setup.sh  test_index.py  verify_config.py  verify_offline_setup.py
src/source_qa/: __init__.py  cli.py  config.py  doc_indexer.py  embeddings.py  indexer.py  knowledge_graph.py  parser.py  qa_engine.py  retriever.py
src/source_qa/models/: __init__.py  code_entity.py  doc_chunk.py  knowledge_edge.py
src/source_qa/parsers/: __init__.py  code_parser.py  pdf_parser.py
tests/: __init__.py  test_embeddings.py  test_parser.py  test_retriever.py
