[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-source-qa"
version = "0.1.0"
description = "PostgreSQL Source Code & Documentation QA System - Ask questions about PostgreSQL internals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["postgresql", "source-code", "qa", "ai", "kimi", "moonshot", "documentation", "internals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Documentation",
]

# Core dependencies
dependencies = [
    # LLM Integration
    "openai>=1.0.0",
    
    # RAG Framework - LlamaIndex
    "llama-index>=0.11.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "llama-index-retrievers-bm25>=0.2.0",
    
    # Vector Database
    "chromadb>=0.5.0",
    
    # Embedding Models
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.0",  # BGE embeddings
    
    # Tree-sitter for Code Parsing
    "tree-sitter>=0.22.0",
    "tree-sitter-c>=0.21.0",  # C language for PostgreSQL
    "tree-sitter-cpp>=0.22.0",  # C++ (if needed)
    
    # PDF Parsing
    "PyMuPDF>=1.24.0",  # fitz - fast PDF processing
    "pdfplumber>=0.11.0",  # table extraction
    "pikepdf>=9.0.0",  # PDF manipulation
    
    # Text Processing & NLP
    "transformers>=4.40.0",
    "tiktoken>=0.7.0",
    "spacy>=3.7.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    
    # Graph Processing (for code-document knowledge graph)
    "networkx>=3.2.0",
    
    # Information Retrieval
    "rank-bm25>=0.2.2",  # BM25 ranking algorithm
    "scikit-learn>=1.4.0",
    
    # Git Operations (for downloading PostgreSQL source)
    "gitpython>=3.1.40",
    "pydriller>=2.6.0",  # Mining software repositories
    
    # Configuration & CLI
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    
    # Progress & Utilities
    "tqdm>=4.66.0",
    "tenacity>=8.3.0",  # Retry logic
    "cachetools>=5.3.0",  # Caching
    
    # Web Interface (optional, for basic UI)
    "streamlit>=1.35.0",
    "gradio>=4.0.0",
    
    # API Server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipython>=8.24.0",
    "jupyter>=1.0.0",
]

# GPU acceleration
gpu = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
]

# All optional dependencies
all = [
    "pg-source-qa[dev,gpu]"
]

[project.scripts]
pg-qa = "source_qa.cli:main_entry"
pg-source-qa = "source_qa.cli:main_entry"

[project.urls]
Homepage = "https://github.com/yourusername/pg-source-qa"
Documentation = "https://github.com/yourusername/pg-source-qa/blob/main/README.md"
Repository = "https://github.com/yourusername/pg-source-qa"
Issues = "https://github.com/yourusername/pg-source-qa/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/source_qa"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | postgres
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.pytest-cov]
source = ["src/source_qa"]
omit = [
    "*/tests/*",
    "*/test_*",
]
